Fix header spacing and correct 8px text margins

--- a/css/styles.css
+++ b/css/styles.css
@@ -109,6 +109,10 @@ body {
   color: var(--secondary-text-color);
 }
 
+.nav {
+  margin-right: 332px;
+}
+
 /* HERO */
 .hero {
   background-color: var(--hero-bg);
@@ -165,6 +169,9 @@ body {
 .team-info {
   padding: 32px 0;
   text-align: center;
+}
+
+.team-name {
   margin-bottom: 8px;
 }
 
@@ -183,9 +190,11 @@ body {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
-  margin-bottom: 8px;
 }
 
+.portfolio-name {
+  margin-bottom: 8px;
+}
 /* FOOTER */
 .footer {
   background-color: var(--footer-bg);
